# clickOR

./: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml
.pebbles/: config.json  events.jsonl
docs/: CONCEPTS.md  CONFIG.md  EXPORT_FROM_DB.md  FLAT_PLAYLIST_RUNBOOK.md  PROBING.md  STEP_BY_STEP.md  TELEVISION_RUNBOOK.md  TRANSCODING_PRISONER.md  TROUBLESHOOTING.md
examples/: example-config.json  export-spec-television.json  oddities.json  television.json
src/clickor/: __init__.py  bumpers.py  cli.py  companions.py  config.py  duration.py  env.py  ersatztv_db.py  export_from_db.py  flat.py  generate.py  model.py  probe_dir.py  remote_sqlite.py  solver.py  tv.py  verify.py  yaml_out.py
tests/: test_companions.py  test_config_and_solver.py  test_duration.py  test_duration_fractional.py  test_flat.py  test_tv.py  test_verify.py
